ci: spotless:apply and wordlist.txt update