@@ -1,18 +1,7 @@
 package com.redis.om.spring.annotations.document;
 
-import com.redis.om.spring.AbstractBaseDocumentTest;
-import com.redis.om.spring.fixtures.document.model.*;
-import com.redis.om.spring.fixtures.document.repository.Doc5Repository;
-import com.redis.om.spring.fixtures.document.repository.SKUCacheRepository;
-import com.redis.om.spring.fixtures.document.repository.StudentRepository;
-import com.redis.om.spring.fixtures.document.repository.User2Repository;
-import com.redis.om.spring.search.stream.EntityStream;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.ExampleMatcher;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.repository.query.FluentQuery.FetchableFluentQuery;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -21,10 +10,24 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.ExampleMatcher;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.repository.query.FluentQuery.FetchableFluentQuery;
 
-@SuppressWarnings("SpellCheckingInspection")
+import com.redis.om.spring.AbstractBaseDocumentTest;
+import com.redis.om.spring.fixtures.document.model.*;
+import com.redis.om.spring.fixtures.document.repository.Doc5Repository;
+import com.redis.om.spring.fixtures.document.repository.SKUCacheRepository;
+import com.redis.om.spring.fixtures.document.repository.StudentRepository;
+import com.redis.om.spring.fixtures.document.repository.User2Repository;
+import com.redis.om.spring.search.stream.EntityStream;
+
+@SuppressWarnings(
+  "SpellCheckingInspection"
+)
 class RepositoryIssuesTest extends AbstractBaseDocumentTest {
   @Autowired
   User2Repository repository;
@@ -91,8 +94,8 @@ class RepositoryIssuesTest extends AbstractBaseDocumentTest {
     List<SKU> result = skuCacheRepository.findAllBySkuNameIn(Set.of("SKU 1", "SKU 2"));
 
     assertAll( //
-        () -> assertThat(result).hasSize(2),
-        () -> assertThat(result).extracting("skuName").containsExactlyInAnyOrder("SKU 1", "SKU 2") //
+        () -> assertThat(result).hasSize(2), () -> assertThat(result).extracting("skuName").containsExactlyInAnyOrder(
+            "SKU 1", "SKU 2") //
     );
   }
 
@@ -101,8 +104,8 @@ class RepositoryIssuesTest extends AbstractBaseDocumentTest {
     List<SKU> result = skuCacheRepository.findAllBySkuNumberIn(Set.of("A11111", "A00000"));
 
     assertAll( //
-        () -> assertThat(result).hasSize(2),
-        () -> assertThat(result).extracting("skuNumber").containsExactlyInAnyOrder("A11111", "A00000") //
+        () -> assertThat(result).hasSize(2), () -> assertThat(result).extracting("skuNumber").containsExactlyInAnyOrder(
+            "A11111", "A00000") //
     );
   }
 
@@ -141,8 +144,8 @@ class RepositoryIssuesTest extends AbstractBaseDocumentTest {
 
   @Test
   void testQBEWithAliasWithHyphensAndOrderBy() {
-    Function<FetchableFluentQuery<Student>, Student> sortFunction = query -> query.sortBy(
-        Sort.by("Event-Timestamp").descending()).firstValue();
+    Function<FetchableFluentQuery<Student>, Student> sortFunction = query -> query.sortBy(Sort.by("Event-Timestamp")
+        .descending()).firstValue();
 
     var matcher = ExampleMatcher.matching().withMatcher("userName", ExampleMatcher.GenericPropertyMatcher::exact);
 
@@ -170,8 +173,7 @@ class RepositoryIssuesTest extends AbstractBaseDocumentTest {
     LocalDateTime to = LocalDateTime.now();
 
     // First debug using EntityStream
-    List<Doc5> resultsWithEntityStream = entityStream.of(Doc5.class)
-        .filter(Doc5$.REGISTRATION_DATE.between(from, to))
+    List<Doc5> resultsWithEntityStream = entityStream.of(Doc5.class).filter(Doc5$.REGISTRATION_DATE.between(from, to))
         .collect(Collectors.toList());
 
     // Now try repository method
@@ -184,9 +186,8 @@ class RepositoryIssuesTest extends AbstractBaseDocumentTest {
   @Test
   void testFindByIsActive() {
     // First debug using EntityStream
-    List<Doc5> resultsWithEntityStream = entityStream.of(Doc5.class)
-        .filter(Doc5$.IS_ACTIVE.eq(true))
-        .collect(Collectors.toList());
+    List<Doc5> resultsWithEntityStream = entityStream.of(Doc5.class).filter(Doc5$.IS_ACTIVE.eq(true)).collect(Collectors
+        .toList());
 
     // Now try repository method
     List<Doc5> resultsByActive = doc5Repository.findByIsActive(true);
